# personal-agents

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  langchain_agents.md  langchain_create_agent.md  march-1-summary.md  pyproject.toml  setup.md
.github/workflows/: deploy.yml
app/: config.py  main.py
app/bots/nutrition/: agent.py  models.py  nutritionix.py  router.py  scheduler.py
app/bots/podcast/: agent.py  feeds.py  models.py  router.py  scheduler.py  spotify.py
app/bots/social/: models.py  router.py  scheduler.py
app/common/: audio.py  llm.py  scheduler.py  telegram.py
app/db/: __init__.py  models.py  session.py
app/webhooks/: telegram.py
