[project]
name = "personal-agents"
version = "0.1.0"
description = "Personal Telegram bot agents monorepo"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "httpx>=0.28",
    "pydantic-settings>=2.0",
    "feedparser>=6.0",
    "apscheduler>=3.10,<4.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
